--- a/wk12js/nyan/index.html
+++ b/wk12js/nyan/index.html
@@ -14,7 +14,7 @@
         <div class="card">
           <h5 class="card-header">Add a Cat!</h5>
           <div class="card-body">
-            <form>
+            <form id="add-cat">
               <div class="form-group">
                 <label for="catName">Cat Name</label>
                 <input type="text" class="form-control" id="catName" placeholder="Cat Name">
@@ -25,7 +25,7 @@
               </div>
               <div class="form-group">
                 <label for="catUrl">Cat URL</label>
-                <input type="text" class="form-control" id="catName" placeholder="Cat URL">
+                <input type="text" class="form-control" id="catUrl" placeholder="Cat URL">
               </div>
               <div class="text-center">
                 <button type="submit" class="btn btn-success">Submit</button>
